[#27394307] little bug on letter-spacing l4 l

--- a/svr/textopoly/public/stylesheets/txt_z10.css
+++ b/svr/textopoly/public/stylesheets/txt_z10.css
@@ -73,7 +73,7 @@
 	font-size: 37px;
 	line-height: 32px;
 	text-align: center;
-	letter-spacing: 10px;
+	letter-spacing: 8px;
 }
 .z10 > .msg.l.l15 > p {
 	margin-top: 8px;
