--- a/svr/textopoly/public/stylesheets/txt_z2.css
+++ b/svr/textopoly/public/stylesheets/txt_z2.css
@@ -73,7 +73,7 @@
 	font-size: 186px;
 	line-height: 160px;
 	text-align: center;
-	letter-spacing: 60px;
+	letter-spacing: 30px;
 }
 .z2 > .msg.l.l15 > p {
 	margin-top: 54px;
